objects/FSL_Coverage_Details__c.object
<CustomObject>
    <description>Created for storing coverage details for every work order</description>
    <fields>
        <fullName>Component_Type_Code__c</fullName>
        <label>Component Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cov_Kms__c</fullName>
        <label>Cov Kms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cov_Miles__c</fullName>
        <label>Cov Miles</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Miles_Km_Hr_Mw_Hr__c</fullName>
        <formula>IF( ISBLANK(Cov_Miles__c ) , &apos;&apos;, &apos;Miles/Kilometers: &apos; +  Cov_Miles__c + &apos;/&apos; + Cov_Kms__c) + BR() + 
&apos;Hours: &apos; + Hours__c + BR() + 
&apos;Megawatt Hours: &apos; + Mega_Watt_Hours__c</formula>
        <label>Coverage Miles/Km/Hr/Mw Hr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Name__c</fullName>
        <label>Coverage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>*Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Definition_Type__c</fullName>
        <label>Coverage Definition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Coverage Details</relationshipLabel>
        <relationshipName>Coverage_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Coverage Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Months__c</fullName>
        <label>Coverage Months</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mega_Watt_Hours__c</fullName>
        <label>Coverage Megawatt Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Months__c</fullName>
        <label>Min Months</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Number__c</fullName>
        <label>Procedure Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusColor__c</fullName>
        <formula>IF( ($Profile.Name = &apos;EVL_Dealer_Advanced&apos; || $Profile.Name = &apos;EVL_Dealer_Technician&apos;),if( TEXT($User.LanguageLocaleKey) &lt;&gt;&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/ACTIVEPNG.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/EXPIREDPNG.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/NOTYETPNG.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;)
)
),if( TEXT( $User.LanguageLocaleKey ) ==&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/ACTIVEPNG_fr.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/EXPIREDPNG_fr.png&quot;, &quot;red&quot;, 18 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/NOTYETACTIVEPNG_fr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;)
)
), &quot;&quot;)
),if( TEXT($User.LanguageLocaleKey)==&apos;en_US&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVEPNG.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIREDPNG.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETPNG.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVEPNG_fr.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIREDPNG_fr.png&quot;, &quot;red&quot;, 18 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVEPNG_fr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;es&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_es.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_es.png&quot;, &quot;red&quot;, 16 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_es.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;tr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_tr.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_tr.png&quot;, &quot;red&quot;, 22 ,65),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_tr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),
if( TEXT( $User.LanguageLocaleKey ) ==&apos;de&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_de.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_de.png&quot;, &quot;red&quot;, 14 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_de.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;ko&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_ko.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_ko.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETPNG_ko.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),&quot;&quot;)))))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date_Formula__c</fullName>
        <formula>DATE(VALUE(RIGHT(Warranty_End__c, 4)), VALUE(LEFT(Warranty_End__c, FIND(&quot;/&quot;, Warranty_End__c) - 1)), VALUE(MID(Warranty_End__c, FIND(&quot;/&quot;, Warranty_End__c) + 1, FIND(&quot;/&quot;, Warranty_End__c, FIND(&quot;/&quot;, Warranty_End__c) + 1) - FIND(&quot;/&quot;, Warranty_End__c) - 1)))</formula>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_End_URL__c</fullName>
        <label>Warranty End URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_End__c</fullName>
        <label>Warranty End Date (MM/DD/YYYY)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Manual_URL__c</fullName>
        <formula>IF(ISBLANK(Warranty_End_URL__c ),&quot;Not Available&quot;,HYPERLINK( Warranty_End_URL__c + Procedure_Number__c , &quot;Click Here&quot;, &quot;_blank&quot; ))</formula>
        <label>Warranty Administration Manual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_StartDate__c</fullName>
        <label>Warranty Start Date (MM/DD/YYYY)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <label>Coverage Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL_Service_Order__c</field>
            <operation>contains</operation>
            <value>1968</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Coverage Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>